<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center_vertical"
        android:background="@color/colorPrimary"
        android:elevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                style="@style/text.white.24"
                android:text="@string/string_title"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_alignParentRight="true">

            <LinearLayout
                android:id="@+id/img_main_tool_ocr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/img_ocr"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/btn_ocr_selector"
                    android:onClick="OnClickOCR"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/img_main_tool_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="14sp"
                android:layout_marginRight="14sp">

                <ImageView
                    android:id="@+id/img_settings"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:src="@drawable/btn_settings_selector"
                    android:onClick="OnClickSettings"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llt_connstatus"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="@color/colorGreenLight"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/txt_connstatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Online"
            android:textSize="17dp"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="4dp"
        android:background="@color/colorWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ListView
                android:id="@+id/list_main_texts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:transcriptMode="alwaysScroll"
                android:divider="@null"/>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:gravity="center_vertical"
        android:background="@color/colorGreyDestination"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/rlt_main_voice"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginLeft="8dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/img_main_mic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_circle1_cl"
                android:onClick="OnClickMic"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="12dp"
            android:padding="8dp"
            android:gravity="center_vertical"
            android:background="@drawable/blue_border_8"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_main_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:textSize="16dp"
                android:gravity="top|left"
                android:hint="@string/string_type_text"
                android:inputType="textMultiLine"
                android:lines="5"
                android:minLines="1"
                android:maxLines="5"
                android:background="@null"/>

            <LinearLayout
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="-24dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_main_send"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:background="@drawable/btn_send_selector"
                    android:onClick="OnClickSend"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <RelativeLayout
        android:id="@+id/llt_main_bottom"
        android:layout_width="match_parent"
        android:layout_height="46dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/llt_main_bottombar_left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/btn_btoom_left_selector"
                android:orientation="horizontal"
                android:onClick="onClickBottomLeft">

                <ImageView
                    android:id="@+id/img_main_flag_entry"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginRight="12dp"/>

                <TextView
                    android:id="@+id/txt_main_entry"
                    style="@style/text.white.18"
                    android:text="@string/language_lao" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llt_main_bottombar_right"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/btn_btoom_right_selector"
                android:orientation="horizontal"
                android:onClick="onClickBottomRight">

                <TextView
                    android:id="@+id/txt_main_output"
                    style="@style/text.blue.18"
                    android:text="@string/language_english" />

                <ImageView
                    android:id="@+id/img_main_flag_output"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="12dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/llt_exchange_language"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/btn_exchange_selector"
                android:gravity="center"
                android:onClick="onClickExchange">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:src="@drawable/ic_swap_language" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/rlt_admob"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="18dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="bottom">

                <LinearLayout
                    android:id="@+id/llt_admob_information"
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:layout_marginStart="2dp"
                    android:background="@drawable/ic_info_outline_blue_24dp"
                    android:orientation="horizontal"
                    android:onClick="onClickAdmobInformation"/>

                <LinearLayout
                    android:id="@+id/llt_admob_close"
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:background="@drawable/ic_close_blue_24dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:orientation="horizontal"
                    android:onClick="onClickAdmobClose"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="138dp">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/pager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|end">

                <LinearLayout
                    android:id="@+id/llt_admob_learn_more"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp"
                    android:background="@drawable/grey_dark_12"
                    android:gravity="center"
                    android:elevation="2dp"
                    android:layout_marginEnd="12dp"
                    android:onClick="onClickLearnMore">

                    <TextView
                        style="@style/text.white.12"
                        android:text="@string/string_learn_more" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>